# grc-control-automation

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_automation.py  tests.yml
.github/workflows/: tests.yml
config/: controls.yaml  settings.yaml
dashboard/: app.py
src/: __init__.py  control_engine.py  data_generator.py  evidence_generator.py  report_builder.py  risk_scorer.py
tests/: test_control_engine.py
