[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "grc-control-automation"
version = "1.0.0"
description = "Automated GRC Privileged Access Review — SOC 2 · PCI DSS · ISO 27001"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["grc", "compliance", "security", "iam", "soc2", "pci-dss", "iso27001"]
dependencies = [
    "streamlit>=1.32.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "pyyaml>=6.0.1",
    "faker>=22.0.0",
    "rich>=13.7.0",
    "jinja2>=3.1.3",
    "openpyxl>=3.1.2",
    "numpy>=1.26.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
grc-run    = "run_automation:main"

[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "dashboard*", "config*"]
